# autovideosink-test

./: CMakeLists.txt  main.cpp
snap/: snapcraft.yaml
